--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "jest": "^22.4.3",
     "json2csv": "^4.1.2",
+    "lodash": "^4.17.10",
     "mongoose": "^5.0.16",
     "request": "^2.85.0"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3"
   }
 }
