--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch validation"
   },
   "author": "",
   "license": "ISC",
